--- a/client/src/components/navigation/nav.css
+++ b/client/src/components/navigation/nav.css
@@ -6,11 +6,12 @@
     /* flex-wrap: wrap; */
     justify-content: space-evenly;
     text-align: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.9);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.6);
     z-index: 1;
+    background: hsl(216, 100%, 22%);
   }
 .nav-links a{
-    color: darkblue;
+    color: #fff;
     font-weight: 600;
     text-decoration: none;
     font-size: 1.5vw;
