--- a/client/src/components/main/animation.css
+++ b/client/src/components/main/animation.css
@@ -2,11 +2,16 @@
 @import url('https://fonts.googleapis.com/css?family=Anton|Roboto');
 .position-animation {
     position: absolute;
-    top: 25vh;
+    top: 10em;
     left: 2em;
     letter-spacing: 5px;
-
 }
+@media only screen and (max-width:520px){
+    .position-animation {
+      top: 2em;
+  }
+}
+
 .word {
 	font-family: 'Anton', sans-serif;
 	perspective: 1000px; 
