--- a/client/src/components/main/events.css
+++ b/client/src/components/main/events.css
@@ -2,53 +2,27 @@
  height: auto;
  overflow: hidden;
  background: linear-gradient(midnightblue,royalblue);
+ display: flex;
+ flex-wrap: wrap;
+ /* justify-content: space-evenly; */
  opacity: .9;
 }
-.events-body img {
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    opacity: .5;
+.p-events-body {
+    flex: 1;
+    margin: auto;
+
 }
 .events-box {
     display: block;
-    z-index: 1;
     border: none;
     background: red;
+    text-align: center;
     color: #fff;
     font-weight: bold;
-    padding: 1em;
-    font-size: 2em;
-    width: 25%;
-    margin: 1em;
+    padding: 16px;
+    font-size: 2rem;
+    width: auto;
+    margin: 16px 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5),0 6px 20px 0 rgba(0,0,0,0.5);
     cursor: pointer;
-}
-.events-box::selection {
-    background: none;
-}
-.content {
-    display: none;
-    position: relative;
-    float: right;
-    width: 60%;
-    margin-top: -34.7em;
-    margin-right: 1.8em;
-    background: #fff;
-    padding: 2em 1.5em;
-    animation: .3s AnimateDiv;
-    font-size: 1.2em;
-}
-.block-display {
-    display: block;
-}
-@keyframes AnimateDiv {
-    from {
-        top: -10em;
-        opacity: 0;
-    }
-    to {    
-        top: 0;
-        opacity: 1;
-    }
 }
