--- a/client/src/components/navigation/nav.css
+++ b/client/src/components/navigation/nav.css
@@ -1,7 +1,8 @@
 .nav-links {
-    position: absolute;
+    position: fixed;
+    top: 0;
     border: none;
-    width: 100vw;
+    width: 100%;
     display: flex;
     /* flex-wrap: wrap; */
     justify-content: space-evenly;
@@ -14,9 +15,9 @@
     color: #fff;
     font-weight: 600;
     text-decoration: none;
-    font-size: 1.5vw;
-    padding: 1em 2em;
-    width: 100vw;
+    font-size: 1.5rem;
+    padding: 25px 30px;
+    width: 100%;
     outline: none;
     transition: .3s;
  }
