--- a/client/src/components/main/events.css
+++ b/client/src/components/main/events.css
@@ -23,6 +23,7 @@
     font-size: 2rem;
     width: auto;
     margin: 16px 20px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5),0 6px 20px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
     cursor: pointer;
+    border-radius: 8px;
 }
