--- a/client/src/components/main/poll.css
+++ b/client/src/components/main/poll.css
@@ -1,10 +1,12 @@
 .poll-body {
+    position: relative;
     border: 1px solid #fff;
-    margin: 18px 0px;
+    margin: 18px auto;
     margin-left: 12px;
     background: #fff;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5),0 6px 20px 0 rgba(0,0,0,0.5);
     border-radius: 8px;
+    padding: 32px 0px;
 }
 .poll-question {
     text-align: center;
